fix math/Combination: Version change